# algo-chuck-toolkit

./: .gitignore  Cargo.toml  DISTRIBUTION.md  LICENSE  README.md  REFACTORING_SUMMARY.md  test_certs.sh
crates/schwab-api/: Cargo.toml  PUBLISHING_STRATEGY.md
crates/schwab-api-core/: Cargo.toml
crates/schwab-api-core/src/: config.rs  error.rs  lib.rs  reqwest_client.rs  response.rs  ureq_client.rs
crates/schwab-api-core/src/client/: api_client.rs  mod.rs  params.rs  traits.rs
crates/schwab-api-marketdata/: Cargo.toml
crates/schwab-api-marketdata/src/: async_client.rs  asynchronous.rs  client.rs  lib.rs  params.rs  sync_client.rs
crates/schwab-api-oauth/: Cargo.toml
crates/schwab-api-oauth/src/: async_client.rs  client.rs  config.rs  error.rs  lib.rs  sync_client.rs
crates/schwab-api-trader/: Cargo.toml
crates/schwab-api-trader/src/: async_client.rs  asynchronous.rs  blue.rs  client.rs  lib.rs  params.rs  sync_client.rs  synchronous.rs
crates/schwab-api-types/: Cargo.toml
crates/schwab-api-types/src/: lib.rs
crates/schwab-api-types/src/marketdata/: asset_main_type.rs  bond.rs  candle.rs  candle_list.rs  contract_type.rs  div_freq.rs  equity_asset_sub_type.rs  equity_response.rs  error.rs  error_response.rs  error_source.rs  exercise_type.rs  expiration.rs  expiration_chain.rs  expiration_type.rs  extended_market.rs  forex_response.rs  fund_strategy.rs  fundamental.rs  fundamental_inst.rs  future_option_response.rs  future_response.rs  get_chain_params.rs  get_expiration_chain_params.rs  get_instrument_by_cusip_params.rs  get_instruments_200_response.rs  get_instruments_params.rs  get_market_hour_params.rs  get_market_hours_params.rs  get_movers_200_response.rs  get_movers_params.rs  get_price_history_params.rs  get_quote_params.rs  get_quotes_params.rs  hours.rs  index_response.rs  instrument.rs  instrument_response.rs  interval.rs  mod.rs  (+29 more)
crates/schwab-api-types/src/trader/: account.rs  account_api_option_deliverable.rs  account_cash_equivalent.rs  account_equity.rs  account_fixed_income.rs  account_mutual_fund.rs  account_number_hash.rs  account_option.rs  accounts_base_instrument.rs  accounts_instrument.rs  amount_indicator.rs  api_order_status.rs  api_rule_action.rs  asset_type.rs  cancel_order_params.rs  cash_account.rs  cash_balance.rs  cash_initial_balance.rs  collective_investment.rs  commission.rs  commission_and_fee.rs  commission_leg.rs  commission_value.rs  complex_order_strategy_type.rs  currency.rs  date_param.rs  duration.rs  execution_leg.rs  fee_leg.rs  fee_type.rs  fee_value.rs  fees.rs  forex.rs  future.rs  get_account_params.rs  get_accounts_params.rs  get_order_params.rs  get_orders_by_path_params.rs  get_orders_by_query_params.rs  get_transaction_by_id_params.rs  (+56 more)
crates/schwab-api-types/src/types/: asset_main_type.rs  bond.rs  candle.rs  candle_list.rs  contract_type.rs  div_freq.rs  equity_response.rs  error.rs  error_response.rs  error_source.rs  exercise_type.rs  expiration.rs  expiration_chain.rs  expiration_type.rs  forex_response.rs  fund_strategy.rs  fundamental.rs  fundamental_inst.rs  future_option_response.rs  future_response.rs  get_instruments_200_response.rs  get_movers_200_response.rs  hours.rs  index_response.rs  instrument.rs  instrument_response.rs  interval.rs  mutual_fund_response.rs  option_chain.rs  option_contract.rs  option_response.rs  quote_forex.rs  quote_future_option.rs  quote_mutual_fund.rs  quote_response_object.rs  quote_type.rs  reference_equity.rs  reference_forex.rs  reference_future_option.rs  reference_mutual_fund.rs  (+2 more)
crates/schwab-api/src/: lib.rs
examples/: basic.rs  custom_clients.rs  individual_crates.rs  minimal.rs  oauth_clients.rs
tools/algo-chuck-cli/: Cargo.toml  README.md
tools/algo-chuck-cli/src/: cli.rs  display.rs  main.rs  oauth.rs  server.rs
tools/algo-chuck-cli/src/auth/: auto_refresh.rs
tools/algo-chuck-cli/src/ca/: generator.rs  installer.rs  mod.rs  storage.rs
tools/algo-chuck-cli/src/cli/: accounts.rs  auth.rs  ca.rs  chain.rs  config.rs  instruments.rs  market_hours.rs  mod.rs  movers.rs  option_chains.rs  quotes.rs  user.rs  user_preference.rs
tools/algo-chuck-cli/src/commands/: accounts.rs  ca.rs  chain.rs  config.rs  info.rs  instruments.rs  login.rs  market_hours.rs  mod.rs  movers.rs  option_chains.rs  options_expiration_chain.rs  orders.rs  price_history.rs  quotes.rs  refresh.rs  status.rs  transactions.rs  user_preference.rs
tools/algo-chuck-cli/src/commands/fetch/: accounts.rs  mod.rs  trader.rs  transactions.rs  user_preference.rs
tools/algo-chuck-cli/src/config/: credentials.rs  encryption.rs  manager.rs  mod.rs  storage.rs  types.rs
tools/cli/: README.md
tools/cli/src/: main.rs  oauth.rs  server.rs
tools/cli/src/auth/: auto_refresh.rs  mod.rs
tools/cli/src/ca/: generator.rs  installer.rs  mod.rs
tools/cli/src/cli/: config.rs  mod.rs  options_expiration_chain.rs  orders.rs  price_history.rs  transactions.rs
tools/cli/src/commands/: accounts.rs  ca.rs  chain.rs  instruments.rs  options_expiration_chain.rs  orders.rs  price_history.rs  quotes.rs  refresh.rs  user_preference.rs
tools/cli/templates/: ca_test.html  oauth_404.html  oauth_success.html
tools/paper/: ACCOUNT_MANAGEMENT_PLAN.md  Cargo.toml  PAPER_TRADER_PLAN.md  README.md  TRADING_GUIDE.md
tools/paper/src/: api.rs  error.rs  main.rs  response.rs
tools/paper/src/db/: error.rs  mod.rs  schema.sql
tools/paper/src/db/migrations/: 001_initial_schema.sql
tools/paper/src/db/repositories/: accounts.rs  mod.rs  orders.rs  transactions.rs  user_preference.rs
tools/paper/src/handlers/: accounts.rs  admin.rs  error_mapping.rs  mod.rs  orders.rs  transactions.rs  user_preference.rs
tools/paper/src/services/: accounts.rs  market_data.rs  mod.rs  order_executor.rs  orders.rs  transactions.rs  user_preference.rs
tools/paper/tests/: dev_client.rs
