[package]
name = "schwab-api-core"
edition.workspace = true
version.workspace = true
authors.workspace = true
license.workspace = true
description = "Core traits, errors, and foundational functionality for the Schwab API"

[dependencies]
schwab-api-types = { path = "../schwab-api-types" }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["full"] }
reqwest = { workspace = true }
url = { workspace = true }
async-trait = { workspace = true }
http = { workspace = true }
