[package]
name = "schwab-api-core"
edition.workspace = true
version.workspace = true
authors.workspace = true
license.workspace = true
description = "Core traits, errors, and foundational functionality for the Schwab API"

[features]
default = ["reqwest-client", "trader", "marketdata"]
reqwest-client = ["dep:reqwest"]
ureq-client = ["dep:ureq"]
trader = ["schwab-api-types/trader"]
marketdata = ["schwab-api-types/marketdata"]

[dependencies]
schwab-api-types = { path = "../schwab-api-types", default-features = false }
serde = { workspace = true, features = ["derive", "std"] }
serde_json = { workspace = true, features = ["std"] }
thiserror = { workspace = true }
async-trait = { workspace = true }
http = { workspace = true, features = ["std"] }

# Optional HTTP client implementations
reqwest = { workspace = true, optional = true }
ureq = { workspace = true, optional = true }
