[package]
name = "schwab-api-marketdata"
edition.workspace = true
version.workspace = true
authors.workspace = true
license.workspace = true
description = "Market data API client for the Schwab API"

[dependencies]
schwab-api-types = { path = "../schwab-api-types", default-features = false, features = ["marketdata"] }
schwab-api-core = { path = "../schwab-api-core", default-features = false, features = ["marketdata", "reqwest-client", "ureq-client"] }
schwab-api-oauth = { path = "../schwab-api-oauth" }
serde = { workspace = true, features = ["derive"] }
serde_urlencoded = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["full"] }
reqwest = { workspace = true }
async-trait = { workspace = true }
serde_json = { workspace = true }
http = { workspace = true }