[package]
name = "schwab-api-oauth"
edition.workspace = true
version.workspace = true
authors.workspace = true
license.workspace = true
description = "OAuth authentication implementation for the Schwab API"

[dependencies]
schwab-api-types = { path = "../schwab-api-types" }
schwab-api-core = { path = "../schwab-api-core" }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["full"] }
reqwest = { workspace = true }
ureq = { workspace = true }
url = { workspace = true }
urlencoding = { workspace = true }
base64 = { workspace = true }
uuid = { workspace = true, features = ["v4"] }
