[package]
name = "schwab-api-oauth"
edition.workspace = true
version.workspace = true
authors.workspace = true
license.workspace = true
description = "OAuth authentication implementation for the Schwab API"

[features]
default = ["reqwest-client", "ureq-client"]
reqwest-client = ["dep:reqwest", "dep:tokio"]
ureq-client = ["dep:ureq"]

[dependencies]
schwab-api-types = { path = "../schwab-api-types" }
schwab-api-core = { path = "../schwab-api-core" }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["full"], optional = true }
reqwest = { workspace = true, optional = true }
ureq = { workspace = true, optional = true }
url = { workspace = true }
urlencoding = { workspace = true }
base64 = { workspace = true }
uuid = { workspace = true, features = ["v4"] }
