[package]
name = "schwab-api-trader"
edition.workspace = true
version.workspace = true
authors.workspace = true
license.workspace = true
description = "Trading API client for the Schwab API"

[dependencies]
schwab-api-types = { path = "../schwab-api-types", default-features = false, features = ["trader"] }
schwab-api-core = { path = "../schwab-api-core", default-features = false, features = ["trader", "reqwest-client", "ureq-client"] }
schwab-api-oauth = { path = "../schwab-api-oauth" }
serde = { workspace = true, features = ["derive"] }
serde_urlencoded = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["full"] }
reqwest = { workspace = true }
async-trait = { workspace = true }
serde_json = { workspace = true }
http = { workspace = true }
