[package]
name = "algo-chuck-cli"
edition.workspace = true
version.workspace = true
authors.workspace = true
license.workspace = true
description = "Command-line interface for the Schwab API toolkit"

[dependencies]
schwab-api-core = { path = "../../crates/schwab-api-core" }
schwab-api-trader = { path = "../../crates/schwab-api-trader" }
schwab-api-types = { path = "../../crates/schwab-api-types" }
anyhow = { workspace = true }
async-trait = { workspace = true }
base64 = { workspace = true }
chrono = { workspace = true, features = ["serde", "clock"] }
clap = { version = "4.4", features = ["derive"] }
config = "0.15"
dirs = "6.0"
rcgen = "0.14"
reqwest = { workspace = true }
rustls = { version = "0.23", features = ["ring"] }
rustls-pemfile = "2.0"
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tokio-rustls = "0.26"
toml = "0.9"
url = { workspace = true }
urlencoding = "2.1"
uuid = { workspace = true, features = ["v4"] }
webbrowser = "1.0"

# Encryption dependencies
chacha20poly1305 = "0.10"
argon2 = "0.5"
rand = { workspace = true }

# CA and certificate management
hex = "0.4"
sha2 = "0.10"
time = "0.3"

# Logging and tracing
# tracing = "0.1"
# tracing-subscriber = { version = "0.3", default-features = false }