[package]
name = "algo-chuck-cli"
edition.workspace = true
version.workspace = true
authors.workspace = true
license.workspace = true
description = "Command-line interface for the Schwab API toolkit"

[dependencies]
schwab-api-core = { path = "../../crates/schwab-api-core", default-features = false, features = ["ureq-client", "trader", "marketdata"] }
schwab-api-marketdata = { path = "../../crates/schwab-api-marketdata", default-features = false }
schwab-api-oauth = { path = "../../crates/schwab-api-oauth", default-features = false, features = ["ureq-client"] }
schwab-api-trader = { path = "../../crates/schwab-api-trader", default-features = false }
schwab-api-types = { path = "../../crates/schwab-api-types", default-features = false, features = ["trader", "marketdata"] }
anyhow = { workspace = true }
base64 = { workspace = true }
chrono = { workspace = true, features = ["serde", "clock"] }
clap = { version = "4.4", features = ["derive"] }
config = "0.15"
dirs = "6.0"
rcgen = "0.14"
ureq = { workspace = true }
rustls = { version = "0.23", features = ["ring"] }
rustls-pemfile = "2.0"
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
toml = "0.9"
url = { workspace = true }
uuid = { workspace = true, features = ["v4"] }
webbrowser = "1.0"

# Encryption dependencies
chacha20poly1305 = "0.10"
argon2 = "0.5"
rand = { workspace = true }

# CA and certificate management
hex = "0.4"
sha2 = "0.10"
time = "0.3"
