[package]
name = "algo-chuck-paper-trader"
edition.workspace = true
version.workspace = true
authors.workspace = true
license.workspace = true
description = "A web service mirroring the Schwab Trader API OpenAPI specification for paper trading."

[dependencies]
schwab-api = { path = "../../crates/schwab-api", default-features = false, features = ["trader"] }
# -- Async
tokio = { workspace = true, features = ["full"] }
# -- Database
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "macros", "chrono"] }
# -- Date and Time
chrono = { version = "0.4", features = ["serde"] }
# -- Serde
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
# -- Web
axum = "0.8"
# -- Others
derive_more = {version = "2", features = ["from", "display"] }
thiserror = "2"
rand = "0.8"

[dev-dependencies]
anyhow = "1"
httpc-test = { version = "0.1.1", default-features = false }